# GitSail

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml  test-build.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  main.rs
src-tauri/src/claude/: mod.rs
src-tauri/src/editor/: mod.rs
src-tauri/src/git/: mod.rs
src-tauri/src/project/: mod.rs
src/components/: AddProjectDialog.tsx  ClaudePanel.tsx  EditorPanel.tsx  FileExplorer.tsx  GitPanel.tsx  Layout.tsx
src/pages/: Dashboard.tsx  ProjectDetail.tsx  Settings.tsx
src/stores/: useProjectStore.ts
src/types/: index.ts
